// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`array > should convert array of array of string 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
item ::= "[" space (string ("," space string)*)? "]" space
root ::= "[" space (item ("," space item)*)? "]" space"
`;

exports[`array > should convert array of object 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
number ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space
item ::= "{" space "\\"name\\"" space ":" space string "," space "\\"age\\"" space ":" space number "}" space
root ::= "[" space (item ("," space item)*)? "]" space"
`;

exports[`array > should convert array of string 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
root ::= "[" space (string ("," space string)*)? "]" space"
`;

exports[`object > should convert object 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
number ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space
root ::= "{" space "\\"name\\"" space ":" space string "," space "\\"age\\"" space ":" space number "}" space"
`;

exports[`object > should convert object with additional properties 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
number ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space
root ::= "{" space "\\"name\\"" space ":" space string "," space "\\"age\\"" space ":" space number "}" space"
`;

exports[`object > should convert object with additional properties of object 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
number ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space
root ::= "{" space "\\"name\\"" space ":" space string "," space "\\"age\\"" space ":" space number "}" space"
`;

exports[`object > should convert object with additional properties of string 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
number ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space
root ::= "{" space "\\"name\\"" space ":" space string "," space "\\"age\\"" space ":" space number "}" space"
`;

exports[`object > should convert object with required properties 1`] = `
"space ::= " "?
string ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space
number ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space
root ::= "{" space "\\"name\\"" space ":" space string "," space "\\"age\\"" space ":" space number "}" space"
`;

exports[`primitives > should convert boolean 1`] = `
"space ::= " "?
root ::= ("true" | "false") space"
`;

exports[`primitives > should convert integer 1`] = `
"space ::= " "?
root ::= ("-"? ([0-9] | [1-9] [0-9]*)) space"
`;

exports[`primitives > should convert null 1`] = `
"space ::= " "?
root ::= "null" space"
`;

exports[`primitives > should convert number 1`] = `
"space ::= " "?
root ::= ("-"? ([0-9] | [1-9] [0-9]*)) ("." [0-9]+)? ([eE] [-+]? [0-9]+)? space"
`;

exports[`primitives > should convert string 1`] = `
"space ::= " "?
root ::=  "\\"" ( [^"\\\\] | "\\\\" (["\\\\/bfnrt] | "u" [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F] [0-9a-fA-F]) )* "\\"" space"
`;
